--- a/styles/main.css
+++ b/styles/main.css
@@ -7,6 +7,10 @@
     list-style: none;
 }
 
+a {
+    text-decoration: none;
+}
+
 header {
     position: relative;
     width: 100%;
@@ -242,6 +246,8 @@ header {
 
 .imgBackground {
     height: 80%;
+    overflow: hidden;
+    position: relative;
 }
 .typenspeak {
     background: url(../images/typeNspeak.PNG) center center/cover;
@@ -257,6 +263,26 @@ header {
 }
 .robofriends {
     background: url(../images/robofriends.PNG) center center/cover;
+}
+
+.progress::before {
+    
+    content: 'Work in progress...';
+    color: white;
+    text-align: center;
+    padding-top: 100px;
+    position: absolute;
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, .7);
+    transition: .5s;
+
+}
+
+.progress:hover::before {
+    left: 0;
 }
 
 .about-project {
@@ -565,5 +591,42 @@ footer {
         height: 45px;
         line-height: 45px;
         font-size: 20px;
+    }
+}
+
+@media all and (min-width: 1300px) {
+    .menu-item a {
+        font-size: 4rem;
+    }
+    #home .main-heading {
+        font-size: 8rem;
+    }
+
+    #home .sub-heading {
+        font-size: 4rem;
+        letter-spacing: 0.5rem;
+    }
+
+    #open {
+        font-size: 4rem;
+    }
+
+    .title {
+        font-size: 3rem;
+    }
+
+    .text {
+        font-size: 1.4rem;
+    }
+
+    .contact-heading {
+        font-size: 4rem;
+    }
+
+    .contact ul li a {
+        width: 70px;
+        height: 70px;
+        line-height: 70px;
+        font-size: 35px;
     }
 }
