--- a/styles/main.css
+++ b/styles/main.css
@@ -264,6 +264,9 @@ header {
 .robofriends {
     background: url(../images/robofriends.PNG) center center/cover;
 }
+.responsiveWebpage {
+    background: url(../images/responsiveWebpage.PNG) center center/cover;
+}
 
 .progress::before {
     
