--- a/styles/main.css
+++ b/styles/main.css
@@ -268,6 +268,12 @@ header {
 .responsiveWebpage {
     background: url(../images/responsiveWebpage.PNG) center center/cover;
 }
+.scrollAnimatedWebpage {
+    background: url(../images/scrollAnimatedWebpage.PNG) center center/cover;
+}
+.githubFinder {
+    background: url(../images/githubSearch.PNG) center center/cover;
+}
 
 .progress::before {
     
