--- a/styles/main.css
+++ b/styles/main.css
@@ -257,7 +257,7 @@ header {
     background: url(../images/loanCalculator.PNG) center center/cover;
 }
 .webPage {
-    background: url(../images/webPage.PNG) center center/cover;
+    background: url(../images/sunsetChaser.PNG) center center/cover;
 }
 .bootstrapWebpage {
     background: url(../images/bootstrapWebpage.PNG) center center/cover;
