--- a/styles/main.css
+++ b/styles/main.css
@@ -180,7 +180,7 @@ header {
 /* about section */
 
 #about {
-    background: url(../images/about.JPG) center center/cover;
+    background: url(../images/about-min.JPG) center center/cover;
     height: 100vh;
     padding-top: 20px;
     position: relative;
