my work quazzu project update

--- a/styles/main.css
+++ b/styles/main.css
@@ -266,6 +266,9 @@ header {
 .omnifood {
     background: url(../images/omnifood.PNG) center center/cover;
 }
+.quazzu {
+    background: url(../images/quazzu.PNG) center center/cover;
+}
 .typenspeak {
     background: url(../images/typeNspeak.PNG) center center/cover;
 }
