--- a/styles/main.css
+++ b/styles/main.css
@@ -9,7 +9,8 @@
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     font-family: 'K2D', sans-serif;
     list-style: none;
 }
@@ -42,13 +43,17 @@ header {
     height: 4px;
     background: #acffff;
     margin: 0 0 4px 0;
+    -webkit-transition: all 0.3s ease-in;
     transition: all 0.3s ease-in;
-    box-shadow: 0 0 10px #0ff, 0 0 20px #00b5d4;
+    -webkit-box-shadow: 0 0 10px #0ff, 0 0 20px #00b5d4;
+            box-shadow: 0 0 10px #0ff, 0 0 20px #00b5d4;
 }
 
 .btn-close>.btn-line:nth-child(1) {
 
-    transform: rotate(45deg) translate(5px, 5px);
+    -webkit-transform: rotate(45deg) translate(5px, 5px);
+
+            transform: rotate(45deg) translate(5px, 5px);
 }
 
 .btn-close>.btn-line:nth-child(2) {
@@ -56,7 +61,8 @@ header {
 }
 
 .btn-close>.btn-line:nth-child(3) {
-    transform: rotate(-45deg) translate(7px, -6px);
+    -webkit-transform: rotate(-45deg) translate(7px, -6px);
+            transform: rotate(-45deg) translate(7px, -6px);
 }
 
 /* menu set up */
@@ -68,12 +74,22 @@ header {
     height: 0;
     width: 100%;
     background: #262626;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     text-align: center;
     overflow: hidden;
+    -webkit-transition: 0.5s;
     transition: 0.5s; 
 }
 
@@ -92,11 +108,13 @@ header {
 }
 
 .menu-item, .menu-item a {
+    -webkit-transition: .4s;
     transition: .4s;
 }
 
 .menu-item:hover {
-    transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+            transform: scale(1.1);
 }
 
 .menu-item a:hover {
@@ -118,10 +136,19 @@ header {
     height: 100vh;
     background: #262626;
     color: #acffff;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     text-align: center;
     padding-bottom: 20px;
 }
@@ -129,8 +156,10 @@ header {
 #home .main-heading {
     font-size: 15rem;
     color: #484848;
-    transform: rotate(-10deg);
-    transform-origin: top left;
+    -webkit-transform: rotate(-10deg);
+            transform: rotate(-10deg);
+    -webkit-transform-origin: top left;
+            transform-origin: top left;
     margin-top: -150px;
     margin-left: -50px;
     letter-spacing: -10px;
@@ -152,13 +181,20 @@ header {
 }
 
 #open {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     padding: 20px;
     margin-top: 50px;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     border: #acffff solid 3px;
-    box-shadow: 0 0 10px #0ff, 0 0 20px #00b5d4, 0 0 30px #00b4d4c2, inset 0 0 10px #0ff, inset 0 0 20px #00b5d4, inset 0 0 30px #00b4d4c2;
+    -webkit-box-shadow: 0 0 10px #0ff, 0 0 20px #00b5d4, 0 0 30px #00b4d4c2, inset 0 0 10px #0ff, inset 0 0 20px #00b5d4, inset 0 0 30px #00b4d4c2;
+            box-shadow: 0 0 10px #0ff, 0 0 20px #00b5d4, 0 0 30px #00b4d4c2, inset 0 0 10px #0ff, inset 0 0 20px #00b5d4, inset 0 0 30px #00b4d4c2;
     border-radius: 5px;
     font-size: 3rem;
     text-transform: uppercase;
@@ -171,12 +207,15 @@ header {
 
 .drop-li {
     color: #484848;
-    animation: animate 1s infinite linear;
+    -webkit-animation: animate 1s infinite linear;
+            animation: animate 1s infinite linear;
 }
 
 .drop {
-    transform: rotate(15deg);
-    transform-origin: top left;
+    -webkit-transform: rotate(15deg);
+            transform: rotate(15deg);
+    -webkit-transform-origin: top left;
+            transform-origin: top left;
 }
 
 .text-shadow {
@@ -203,7 +242,8 @@ header {
     text-align: center;
     padding: 10px 20px;
     opacity: 0.9;
-    transform: scale(1);
+    -webkit-transform: scale(1);
+            transform: scale(1);
     border-radius: 5px;
     background: #262626;
     color: white;
@@ -235,13 +275,32 @@ header {
     background: #bdc7d5;
     padding: 30px 10px 20px 10px;
     min-height: 80vh;
+    position:relative;
 }
 
+
+#particles-js {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+      background: transparent;
+  }
+
+
 .workContainer {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 
 }
 
@@ -251,11 +310,13 @@ header {
     background: #bdc7d5;
     border: white solid 3px;
     margin: 10px; 
+    -webkit-transition: all 0.6s ease; 
     transition: all 0.6s ease;
 }
 
 .work:hover {
-    transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+            transform: scale(1.1);
 }
 
 .imgBackground {
@@ -309,6 +370,7 @@ header {
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, .7);
+    -webkit-transition: .5s;
     transition: .5s;
 
 }
@@ -325,9 +387,15 @@ header {
     border-top: white 1px solid;
     text-align: center;
     font-size: 14px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 
 }
 
@@ -341,9 +409,15 @@ header {
 .contact-title {
     height: 40%;
     text-align: center;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 }
 .contact-heading {
     font-size: 3rem;
@@ -352,13 +426,16 @@ header {
 }
 
 .contact-animate {
-    animation: animate 1s infinite linear;
+    -webkit-animation: animate 1s infinite linear;
+            animation: animate 1s infinite linear;
     
 }
 .drop-contact {
     display: inline-block;
-    transform: rotate(-5deg);
-    transform-origin: top right;
+    -webkit-transform: rotate(-5deg);
+            transform: rotate(-5deg);
+    -webkit-transform-origin: top right;
+            transform-origin: top right;
     color: #484848;
     text-shadow: none;
 }
@@ -366,15 +443,26 @@ header {
 .icons {
     padding-top: 20px;
     height: 60%;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: flex-start;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
 }
 
 #contact ul {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
 }
 
 #contact ul li {
@@ -393,6 +481,7 @@ header {
     font-size: 30px;
     border: #666;
     color: #666;
+    -webkit-transition: .5s;
     transition: .5s;
 }
 
@@ -400,14 +489,19 @@ header {
     color: #acffff;
     text-shadow: 0 0 5px #acffff;
     border: #acffff 2px solid;
-    box-shadow: 0 0 15px #acffff, inset 0 0 15px #acffff;
+    -webkit-box-shadow: 0 0 15px #acffff, inset 0 0 15px #acffff;
+            box-shadow: 0 0 15px #acffff, inset 0 0 15px #acffff;
 }
 
 /* footer */
 
 footer {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     text-align: center;
     background: #262626;
     color: white;
@@ -423,7 +517,8 @@ footer {
     position: absolute;
     bottom: 65px;
     right: 50%;
-    transform: translateX(48%) scale(1);
+    -webkit-transform: translateX(48%) scale(1);
+            transform: translateX(48%) scale(1);
     font-size: 1.5rem;
     padding: 10px 20px;
     text-align: center;
@@ -433,7 +528,8 @@ footer {
     text-transform: uppercase;
     border-radius: 60px;
     border: 4px black solid;
-    box-shadow: inset 0 0 30px rgba(0, 0, 0, 1);
+    -webkit-box-shadow: inset 0 0 30px rgba(0, 0, 0, 1);
+            box-shadow: inset 0 0 30px rgba(0, 0, 0, 1);
     overflow: hidden;
 }
 
@@ -445,7 +541,9 @@ footer {
     width: 70%;
     height: 100%;
     background: rgba(255, 255, 255, .1);    
-    transform: skewX(-15deg);
+    -webkit-transform: skewX(-15deg);    
+            transform: skewX(-15deg);
+    -webkit-transition: .5s;
     transition: .5s;
 }
 
@@ -461,9 +559,12 @@ footer {
     width: 50px;
     height: 100%;
     background: rgba(255, 255, 255, .1);    
-    transform: skewX(-15deg);
+    -webkit-transform: skewX(-15deg);    
+            transform: skewX(-15deg);
+    -webkit-transition: .5s;
     transition: .5s;
-    transition-delay: 0.3s;
+    -webkit-transition-delay: 0.3s;
+            transition-delay: 0.3s;
 }
 
 #cv:hover::after {
@@ -472,6 +573,54 @@ footer {
 
 
 /* animation keyframe  */
+
+
+@-webkit-keyframes animate {
+    0% {
+        color: #484848;
+        text-shadow: none;
+    }
+
+    18% {
+        color: #484848;
+        text-shadow: none;
+    }
+
+    20% {
+        color: #acffff;
+        text-shadow: 0 0 10px #0ff, 0 0 20px #00b5d4;
+    }
+
+    30% {
+        color: #484848;
+        text-shadow: none;
+    }
+
+    35% {
+        color: #acffff;
+        text-shadow: 0 0 10px #0ff, 0 0 20px #00b5d4;
+    }
+
+    70% {
+        color: #484848;
+        text-shadow: none;
+    }
+
+    85% {
+        color: #acffff;
+        text-shadow: 0 0 10px #0ff, 0 0 20px #00b5d4;
+    }
+
+    90% {
+        color: #484848;
+        text-shadow: none;
+    }
+
+    100% {
+        color: #484848;
+        text-shadow: none;
+    }
+}
 
 
 @keyframes animate {
